src/ui/snapshots/cctop__ui__coach_view__tests__coach_cold_56x20.snap
---
source: src/ui/coach_view.rs
expression: "render_to_string(&app, 56, 20)"
---
╭coach ─ session-b ─────────────────── opus-5 · turn 6 ╮
│ PLANNING · 1c +83 · ▸ steer window                   │
├──────────────────────────────────────────────────────┤
│ ◐ context  193k ▇▇▁▁▁▁▁▁▁▁ 19% · ≈$.11/call (cold: … │
│ ◐ cache    cold · 193k re-write                      │
│ ○ limits   — no status line                          │
│ ◐ rework   1 correction · edits 3 ✓ none 8h57        │
├──────────────────────────────────────────────────────┤
│ ▸ Fixed prefix 49k tokens ≈$0.37/turn at 15 calls    │
│   trim CLAUDE.md, move rarely-used rules to skills,… │
│   LATER · since turn 6 · +1 queued (n)               │
│                                                      │
│ next     long-foreground → when the slot frees · `c… │
│ snoozed  —                                           │
╰──────────────────────────────────────────────────────╯




 c dashboard  Enter act  x snooze  e why  1-4 light  q
