src/ui/snapshots/cctop__ui__coach_view__tests__coach_denials_110x18.snap
---
source: src/ui/coach_view.rs
expression: "render_to_string(&app, 110, 18)"
---
╭coach ─ session-b ─────────────────── opus-5 · turn 5 ╮  LATER A17 · prefix-tip
│ IDLE 0s · python3 - lor… ok 19m ago                  │  Fixed prefix 49k tokens ≈$0.37/turn at 15 calls
├──────────────────────────────────────────────────────┤
│ ◐ context  720k ▇▇▇▇▇▇▇▁▁▁ 72% · ≈$.37/call          │  evidence  LATER · since turn 5 · +2 queued (n)
│ ○ cache    warm 1h00 (1h) ≈                          │  retires   on 3 turns · since turn 5
│ ○ limits   — no status line                          │  saving    ~147k/turn (an estimate)
│ ● rework   4 blocked · edits 3 ✓ none 18m            │
├──────────────────────────────────────────────────────┤  The fixed prefix (system prompt, CLAUDE.md, tool
│ ▸ Fixed prefix 49k tokens ≈$0.37/turn at 15 calls    │  schemas, skills, plugins) is sent on every request.
│   trim CLAUDE.md, move rarely-used rules to skills,… │  Even as a cache read it is billed on every call, so
│   LATER · since turn 5 · +2 queued (n)               │  its cost per turn is prefix × cache-read price ×
│                                                      │  calls per turn. Trim CLAUDE.md, move rarely used
│ next     reread → when the slot frees · lorem_ipsum… │  rules into skills, and disable MCP servers and
│ snoozed  —                                           │  plugins you do not use in this project.
╰──────────────────────────────────────────────────────╯


 c dashboard  Enter act  x snooze  e why  1-4 light  q
