src/ui/snapshots/cctop__ui__coach_view__tests__coach_denials_40x14.snap
---
source: src/ui/coach_view.rs
expression: "render_to_string(&app, 40, 14)"
---
╭coach ── opus-5 · turn 5 ─────────────╮
│ PLANNING · 5 calls · silent 13m · ▸… │
│ ◐ ctx 720k ≈$.37  ○ cache 1h00       │
│ ○ 5h —            ● blocked 4 ✓no    │
├──────────────────────────────────────┤
│ ▸ rm is denied by your rules         │
│   tell Claude the alternative — it   │
│   cannot run this                    │
╰──────────────────────────────────────╯




 ▸ rm is denied by your rules
