src/ui/snapshots/cctop__ui__coach_view__tests__coach_denials_56x20.snap
---
source: src/ui/coach_view.rs
expression: "render_to_string(&app, 56, 20)"
---
╭coach ─ session-b ─────────────────── opus-5 · turn 5 ╮
│ PLANNING · 5c +490 · silent 13m · ▸ steer window     │
├──────────────────────────────────────────────────────┤
│ ◐ context  720k ▇▇▇▇▇▇▇▁▁▁ 72% · ≈$.37/call          │
│ ○ cache    warm 1h00 (1h) ≈                          │
│ ○ limits   — no status line                          │
│ ● rework   4 blocked · edits 3 ✓ none 18m            │
├──────────────────────────────────────────────────────┤
│ ▸ rm is denied by your rules                         │
│   tell Claude the alternative — it cannot run this   │
│   NOW · fired at call 6 · +4 queued (n)              │
│                                                      │
│ next     context-reset → next-row only · ctx 720k →… │
│ snoozed  —                                           │
╰──────────────────────────────────────────────────────╯




 ▸ rm is denied by your rules
