src/ui/snapshots/cctop__ui__coach_view__tests__coach_explore_56x20.snap
---
source: src/ui/coach_view.rs
expression: "render_to_string(&app, 56, 20)"
---
╭coach ─ session-b ─────────────────── opus-5 · turn 2 ╮
│ EXPLORING · 14c +6.3k · silent 4:32                  │
├──────────────────────────────────────────────────────┤
│ ◐ context  193k ▇▇▁▁▁▁▁▁▁▁ 19% · ≈$.11/call          │
│ ○ cache    warm 59m (1h) ≈                           │
│ ○ limits   — no status line                          │
│ ◐ rework   edits 1 ✓ none 5m                         │
├──────────────────────────────────────────────────────┤
│   quiet · nothing to act on · 0 nudges this hour     │
│                                                      │
│                                                      │
│                                                      │
│ next     —                                           │
│ snoozed  —                                           │
╰──────────────────────────────────────────────────────╯




 c dashboard  Enter act  x snooze  e why  1-4 light  q
