src/ui/snapshots/cctop__ui__coach_view__tests__coach_idle_56x20.snap
---
source: src/ui/coach_view.rs
expression: "render_to_string(&app, 56, 20)"
---
╭coach ─ session-b ─────────────────── opus-5 · turn 4 ╮
│ IDLE 4m · python3 - lor… ok 8m ago                   │
├──────────────────────────────────────────────────────┤
│ ● context  333k ▇▇▇▁▁▁▁▁▁▁ 33% · ≈$.18/call          │
│ ○ cache    warm 55m (1h) ≈                           │
│ ○ limits   — no status line                          │
│ ○ rework   edits 1 ✓ none 7m                         │
├──────────────────────────────────────────────────────┤
│ ▸ Fixed prefix 49k tokens ≈$0.86/turn at 35 calls    │
│   trim CLAUDE.md, move rarely-used rules to skills,… │
│   LATER · since turn 4 · +1 queued (n)               │
│                                                      │
│ next     reread → when the slot frees · lorem_ipsum… │
│ snoozed  —                                           │
╰──────────────────────────────────────────────────────╯




 c dashboard  Enter act  x snooze  e why  1-4 light  q
