src/ui/snapshots/cctop__ui__coach_view__tests__coach_waiting_56x20.snap
---
source: src/ui/coach_view.rs
expression: "render_to_string(&app, 56, 20)"
---
╭coach ─ session-b ─────────────────── opus-5 · turn 6 ╮
│ ◆ WAITING 4:00 · Claude asked a question             │
├──────────────────────────────────────────────────────┤
│ ◐ context  193k ▇▇▁▁▁▁▁▁▁▁ 19% · ≈$.11/call          │
│ ○ cache    warm 56m (1h) ≈                           │
│ ○ limits   — no status line                          │
│ ◐ rework   1 correction · edits 3 ✓ none 25m         │
├──────────────────────────────────────────────────────┤
│ ▸ Fixed prefix 49k tokens ≈$0.37/turn at 15 calls    │
│   trim CLAUDE.md, move rarely-used rules to skills,… │
│   LATER · since turn 6 · +1 queued (n)               │
│                                                      │
│ next     long-foreground → when the slot frees · `c… │
│ snoozed  —                                           │
╰──────────────────────────────────────────────────────╯




 Claude is waiting on you (a question) for 4:00
